# loop-engineering

./: .gitignore  LOOP.md  README.md  STATE.md  loop-budget.md  loop-run-log.md  pyproject.toml
docs/: README.md  concepts.md  loop-design-checklist.md
patterns/: README.md  registry.json
src/loop_engineering/: __init__.py  audit.py  cli.py  cost.py  initializer.py  models.py  patterns.py  rendering.py
src/loop_engineering/data/: __init__.py
src/loop_engineering/data/templates/: copilot-instructions.md.template
starters/: README.md
templates/: README.md
tests/: test_cli.py  test_cost.py  test_init_and_audit.py
